test_regress/t/t_class_param_module_typedef_bad.out
%Error: t/t_class_param_module_typedef_bad.v:30:26: Reference to 'addr_t' before declaration (IEEE 1800-2023 6.18)
                                                  : ... note: In instance 't'
                                                  : ... Suggest move the declaration before the reference, or use a forward typedef
   30 |   typedef rand_master_t::addr_t addr_t;
      |                          ^~~~~~
        t/t_class_param_module_typedef_bad.v:30:33: ... Location of original declaration
   30 |   typedef rand_master_t::addr_t addr_t;
      |                                 ^~~~~~
        ... See the manual at https://verilator.org/verilator_doc.html?v=latest for more assistance.
%Error: Exiting due to
